projects/examples/source/04.02.cpp
//////////////////////////////////////////////////////////////////////////////////////

#include <print>

//////////////////////////////////////////////////////////////////////////////////////

template < typename T > void test_v1         (T     ) { std::print("test_v1 (1)\n"); }

template <            > void test_v1 < int > (int   ) { std::print("test_v1 (2)\n"); }

                        void test_v1         (int   ) { std::print("test_v1 (3)\n"); }

                        void test_v1         (double) { std::print("test_v1 (4)\n"); }

//////////////////////////////////////////////////////////////////////////////////////

template < typename T1, typename T2 > void test_v2(T1, T2)
{
	std::print("test_v2 (1)\n");
}

//////////////////////////////////////////////////////////////////////////////////////

// template < typename T > void test_v2 < T, double > (T, double) // error
// {
//     std::print("test_v2 (2)\n");
// }

//////////////////////////////////////////////////////////////////////////////////////

template < typename T > void test_v2(T, double)
{
	std::print("test_v2 (3)\n");
}

//////////////////////////////////////////////////////////////////////////////////////

int main()
{
    test_v1            (1  );

	test_v1            (1.0);

	test_v1 <        > (1  );

	test_v1 < int    > (1  );

	test_v1 <        > (1.0);

	test_v1 < double > (1.0);

//  -------------------------

	test_v2(1, 2  );

	test_v2(1, 2.0);
}

//////////////////////////////////////////////////////////////////////////////////////